--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,4 +19,17 @@ services:
     # 오류를 보이지 않게 settings.py를 수정, env.dev와 env.prod로 나눠 개발용 파일과 배표용 파일
     env_file:
       - ./.env.dev
+    depends_on:
+      - db
+  db:
+    image: postgres:12.0-alpine
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    environment:
+      - POSTGRES_USER=do_it_django_db_user_prod
+      - POSTGRES_PASSWORD=do_it_django_db_password_prod
+      - POSTGRES_DB=do_it_django_prod
+
+volumes:
+  postgres_data:
 
