--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,10 @@
-appnope==0.1.3
 asgiref==3.2.10
 backcall==0.2.0
-backports.zoneinfo==0.2.1
 beautifulsoup4==4.9.1
 certifi==2020.6.20
 cffi==1.15.0
 chardet==3.0.4
-charset-normalizer==2.0.12
 colorama==0.4.3
-cryptography==36.0.2
 decorator==4.4.2
 defusedxml==0.6.0
 Django==3.1.1
@@ -16,23 +12,21 @@ django-allauth==0.42.0
 django-crispy-forms==1.9.2
 django-extensions==3.0.9
 django-markdownx==3.0.1
+ez-setup==0.9
 gunicorn==20.0.4
 idna==2.10
-importlib-metadata==2.0.0
+importlib-metadata==4.10.0
 ipython==7.18.1
 ipython-genutils==0.2.0
 jedi==0.17.2
 Markdown==3.2.2
 oauthlib==3.1.0
 parso==0.7.1
-pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.1.0
 prompt-toolkit==3.0.7
-ptyprocess==0.7.0
-pycparser==2.21
+psycopg2==2.9.3
 Pygments==2.7.1
-PyJWT==2.3.0
 python3-openid==3.2.0
 pytz==2020.1
 requests==2.24.0
