--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,17 @@
 # 도커 컴포즈 파일 포맷을 최신으로 사용 '3'
 version: '3'
 
-
 services:
+  nginx: # nginx라는 이름의 컨테이너 추가
+    build: ./nginx
+    volumes: # nginx 컨테이너를 만듹 위한 파일을 넣을 nginx폴더를 만든다.
+      - static_volume:/usr/app/_static
+      - media_volume:/usr/app/_media
+    ports:
+      - 80:80
+    depends_on:
+      - web
+
   # web이라는 이름의 서비스 하나만 실행
   web:
     # Dockerfile을 을 실행해 컨테이너 이미지를 만든다.
@@ -15,9 +24,11 @@ services:
 
     # 로컬 컴푸터의 폴더와 도커의 폴더를 연결
     volumes:
+      - static_volume:/usr/app/_static
+      - media_volume:/usr/app/_media
       - ./:/usr/app/
-    ports:
-      - 8000:8000
+    expose: #
+      - 8000
     # 오류를 보이지 않게 settings.py를 수정, env.dev와 env.prod로 나눠 개발용 파일과 배표용 파일
     env_file:
       - ./.env.prod
@@ -32,4 +43,6 @@ services:
 
 volumes:
   postgres_data:
+  static_volume: # 컨테이너를 다시 실했을 때 바로 불러올 수 있다.
+  media_volume:
 
