--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,21 @@ services:
     volumes: # nginx 컨테이너를 만듹 위한 파일을 넣을 nginx폴더를 만든다.
       - static_volume:/usr/app/_static
       - media_volume:/usr/app/_media
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
     ports:
       - 80:80
+      - 443:443 # nginx 웹 서버가 SSL롤 통신하기 위한 443포트를 추가
     depends_on:
       - web
+  certbot:  # 새로운 컨테이너를 certbot이라는 이름으로 생성
+    image: certbot/certbot  # 도커에서 제공하는 certbot 이미지를 가져와서 사용한다.
+    # 리눅스 명령어이다. 12시간마다  certbot을 실행하여 인증서를 갱신,
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!};done'"
+    volumes: # certbot 컨테이너와 nginx 컨테이너가 인증 관련 파일을 공유하도록 volume 설정을 양쪽에 모두 한다.
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
+
 
   # web이라는 이름의 서비스 하나만 실행
   web:
