--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,6 +4,21 @@ upstream do_it_django {
 
 server {
     listen 80;
+    server_name sonweekly.com;
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name sungyonglee.com;
+
     location / {
         proxy_pass http://do_it_django;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -12,10 +27,15 @@ server {
     }
 
     location /static/ {
-        alias /usr/app/_static/;
+        alias /usr/src/app/_static/;
     }
 
     location /media/ {
-        alias /usr/app/_media/;
+        alias /usr/src/app/_media/;
     }
+
+    ssl_certificate /etc/letsencrypt/live/sonweekly.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/sonweekly.com/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 }
